@@ -12,9 +12,9 @@ generated by GNU Autoconf 2.57.  Invocation command line was
 
 hostname = Mookid.local
 uname -m = Power Macintosh
-uname -r = 7.4.0
+uname -r = 7.5.0
 uname -s = Darwin
-uname -v = Darwin Kernel Version 7.4.0: Wed May 12 16:58:24 PDT 2004; root:xnu/xnu-517.7.7.obj~7/RELEASE_PPC 
+uname -v = Darwin Kernel Version 7.5.0: Thu Aug  5 19:26:16 PDT 2004; root:xnu/xnu-517.7.21.obj~3/RELEASE_PPC 
 
 /usr/bin/uname -p = powerpc
 /bin/uname -X     = unknown
@@ -23,8 +23,8 @@ uname -v = Darwin Kernel Version 7.4.0: Wed May 12 16:58:24 PDT 2004; root:xnu/x
 /usr/bin/arch -k       = unknown
 /usr/convex/getsysinfo = unknown
 hostinfo               = Mach kernel version:
-	 Darwin Kernel Version 7.4.0:
-Wed May 12 16:58:24 PDT 2004; root:xnu/xnu-517.7.7.obj~7/RELEASE_PPC
+	 Darwin Kernel Version 7.5.0:
+Thu Aug  5 19:26:16 PDT 2004; root:xnu/xnu-517.7.21.obj~3/RELEASE_PPC
 
 
 Kernel configured for a single processor only.
@@ -32,8 +32,8 @@ Kernel configured for a single processor only.
 Processor type: ppc7450 (PowerPC 7450)
 Processor active: 0
 Primary memory available: 1280.00 megabytes.
-Default processor set: 89 tasks, 239 threads, 1 processors
-Load average: 3.19, Mach factor: 0.22
+Default processor set: 102 tasks, 344 threads, 1 processors
+Load average: 2.91, Mach factor: 0.26
 unknown
 /bin/machine           = unknown
 /usr/bin/oslevel       = unknown
@@ -46,6 +46,7 @@ PATH: /sbin
 PATH: /usr/bin
 PATH: /usr/sbin
 PATH: /usr/X11R6/bin
+PATH: /usr/lib/portage/bin/
 
 
 ## ----------- ##
@@ -72,7 +73,7 @@ configure:1676: found /usr/bin/gcc
 configure:1686: result: gcc
 configure:1930: checking for C compiler version
 configure:1933: gcc --version </dev/null >&5
-gcc (GCC) 3.3 20030304 (Apple Computer, Inc. build 1495)
+gcc (GCC) 3.3 20030304 (Apple Computer, Inc. build 1666)
 Copyright (C) 2002 Free Software Foundation, Inc.
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
@@ -81,7 +82,7 @@ configure:1936: $? = 0
 configure:1938: gcc -v </dev/null >&5
 Reading specs from /usr/libexec/gcc/darwin/ppc/3.3/specs
 Thread model: posix
-gcc version 3.3 20030304 (Apple Computer, Inc. build 1495)
+gcc version 3.3 20030304 (Apple Computer, Inc. build 1666)
 configure:1941: $? = 0
 configure:1943: gcc -V </dev/null >&5
 gcc: `-V' option must have argument
@@ -155,6 +156,7 @@ on Mookid.local
 config.status:647: creating Makefile
 config.status:647: creating src/Makefile
 config.status:751: creating src/config.h
+config.status:836: src/config.h is unchanged
 config.status:942: executing depfiles commands
 
 ## ---------------- ##
